fix spacing

--- a/src/components/splash.module.css
+++ b/src/components/splash.module.css
@@ -1,6 +1,6 @@
 .splash {
   text-align: center;
-  height: 100vh;
+  height: calc(100vh - 10rem);
 }
 .splash h3 {
   margin: 1em 0;
